syntax = "proto3";

package entrypoint;

option go_package = "main";

message Request {
  string name = 1;
}

message Response {
  string greeting = 1;
}

service Entrypoint {
  rpc PyGreet (Request) returns (Response) {
  };
  rpc GoGreet (Request) returns (Response) {
  };
};
